JPMS 検討: 拡張との関係と最終判断（モジュール化しない）を追記
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017JRw42tsRMuNW7JPKGXKfz